--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -11,8 +11,9 @@
             top: 30px;
             bottom: 50px;
         }
-
-        ;
+        @include responsive(md){
+            margin-top:100px;
+        }
         color:$seconaryColor;
     }
 
@@ -25,7 +26,11 @@
         .container {
             @include column;
             align-items: end;
-            margin-right: 80px;
+            @include responsive(md){
+                margin-right: 0px;
+                align-items: center;
+            }
+            margin-right: $mainMargin;
             .form-container {
                 width: 400px;
                 height: 350px;
