--- a/sass/content/_ourDoctor.scss
+++ b/sass/content/_ourDoctor.scss
@@ -51,15 +51,18 @@
             img {
                 height: 200px;
                 @include responsive(md){
-                    height: 100px;
+                    height: 250px;
             }
 }
             .card-header {
-                width: 270px;
+                width: 100%;
                 height: 200px;
                 @include centered;
+                // background: yellow;
                 @include responsive(md){
-                    margin-left: 20%;
+                    // margin-left: 22%;
+                    // width: 270px;
+                    height: 250px;
                 }            
             }
             .card-footer {
