#26 ceate page information of doctor2

--- a/css/informationOfDoctor.css
+++ b/css/informationOfDoctor.css
@@ -204,7 +204,7 @@ footer .footer-container .footer-right .contact-footer i {
   width: 77%;
   height: 300px;
   margin-left: 33px;
-  border-radius: 50%;
+  border-radius: 50px;
   border: 1px solid rgba(192, 190, 190, 0.943);
 }
 .container .circleImgaeofDoctor .card-image .card-image-header .contentOfDoctor h5 {
