--- a/sass/content/_BackgroundOfdoctor.scss
+++ b/sass/content/_BackgroundOfdoctor.scss
@@ -69,7 +69,7 @@
                     width: 77%;
                     height: 300px;
                     margin-left: 33px;
-                    border-radius: 50%;
+                    border-radius: 50px;
                     border: 1px solid $primaryColor;
                 }
                 .contentOfDoctor {
