--- a/sass/component/_nav.scss
+++ b/sass/component/_nav.scss
@@ -1,41 +1,120 @@
 @import './variable';
 @import './group-mxin';
+@import '../mixins/responsive';
+
 nav {
     background-color: rgb(171, 215, 239);
     display: flex;
     justify-content: space-between;
-}
+    
+    .nav-left {
+        flex: 1;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        margin-left: $mainMargin;
+        @include responsive(xl){
+            flex: 0.5;
+        }
 
-.nav-left {
-    flex: 1;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    margin-left: 40px;
+        img {
+            height: 60px;
+            margin-top: 15px;
+        }
 
-    img {
-        height: 60px;
-        margin-top: 15px;
     }
 
-}
-
-.nav-right {
-    flex: 1;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    margin-right: 40px;
-
-    ul {
+    .nav-right {
+        flex: 1;
         display: flex;
-        gap: 40px;
+        justify-content: end;
+        align-items: center;
+        margin-right: $mainMargin;
+        input{
+            display: none;
+        }
+        @include responsive(md){
+              #menu__toggle {
+                opacity: 0;
+              }
+              #menu__toggle:checked + .menu__btn > span {
+                transform: rotate(45deg);
+              }
+              #menu__toggle:checked + .menu__btn > span::before {
+                top: 0;
+                transform: rotate(0deg);
+              }
+              #menu__toggle:checked + .menu__btn > span::after {
+                top: 0;
+                transform: rotate(90deg);
+              }
+              #menu__toggle:checked ~ .menu__box {
+                right: 0 !important;
+              }
+              .menu__btn {
+                position: absolute;
+                top: 36px;
+                right: $mainMargin;
+                width: 26px;
+                height: 26px;
+                cursor: pointer;
+                z-index: 1;
+              }
+              .menu__btn > span,
+              .menu__btn > span::before,
+              .menu__btn > span::after {
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                background-color: #000000;
+                transition-duration: .25s;
+              }
+              .menu__btn > span::before {
+                content: '';
+                top: -8px;
+              }
+              .menu__btn > span::after {
+                content: '';
+                top: 8px;
+              }
+              .menu__box {
+                display: block;
+                position: fixed;
+                top: 0;
+                right: -100%;
+                width: 300px;
+                height: 100%;
+                margin: 0;
+                padding: 60px 0;
+                background-color: $mainColor;
+                box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+                transition-duration: .25s;
+              }
+              .menu__item {
+                display: block;
+                padding: 15px 30px;
+                color: #333;
+                font-family: 'Roboto', sans-serif;
+                transition-duration: .25s;
+              }
+              .menu__item:hover {
+                background-color: #CFD8DC;
+              }
+        }
+        @include responsive(xl){
+            flex: 1.5;
+        }
+        ul {
+            display: flex;
+            gap: 40px;
 
-        li {
-            list-style: none;
+            li {
+                list-style: none;
 
-            a {
-                text-decoration: none;
+                a {
+                    text-decoration: none;
+                }
             }
         }
     }
