--- a/sass/content/_BackgroundOfdoctor.scss
+++ b/sass/content/_BackgroundOfdoctor.scss
@@ -23,6 +23,8 @@
             height: 400px;
             img {
                 height: 400px;
+                border-radius: 7px;
+                border-style: outset;
                 @include centered;
                 flex: 1;
                 @include responsive(md){
@@ -66,11 +68,13 @@
                     width: 100%;
                 }
                 img {
-                    width: 77%;
-                    height: 300px;
+                    width: 80%;
+                    height: 260px;
                     margin-left: 33px;
-                    border-radius: 50px;
-                    border: 1px solid $primaryColor;
+                    border-radius: 7px;
+                }
+                img:hover{
+                    @include style-card;                   
                 }
                 .contentOfDoctor {
                     h5 {
