--- a/sass/mixins/_responsive.scss
+++ b/sass/mixins/_responsive.scss
@@ -10,3 +10,8 @@ $breakpoint: (
         @content;
     }
 }
+@mixin style-card{
+    transition: 1s;
+    transform: scale(1.0);
+    box-shadow: 2px 2px 10px 2px $mainColor; 
+}
