--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,5 +1,6 @@
 @import '../sass/component/nav';
 @import '../sass/component/footer';
+@import './component/header';
 *{
     padding: 0;
     margin: 0;
