--- a/css/contact.css
+++ b/css/contact.css
@@ -204,65 +204,13 @@ footer .footer-container .footer-right .contact-footer i {
   align-items: center;
 }
 .contact-us h1 {
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 50px;
-  color: blue;
-}
-@media screen and (max-width: 768px) {
-  .contact-us h1 {
-    margin-top: 100px;
-  }
 }
 .contact-us .check-schedule {
   width: 100%;
   height: 475px;
   background-image: url(/image/img-of-content/form.jpg);
-  background-size: cover;
-}
-.contact-us .check-schedule .container {
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-  margin-right: 50px;
-}
-@media screen and (max-width: 768px) {
-  .contact-us .check-schedule .container {
-    margin-right: 0px;
-    align-items: center;
-  }
-}
-.contact-us .check-schedule .container .form-container {
-  width: 400px;
-  height: 350px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 10px;
-  border: 2px solid rgba(192, 190, 190, 0.943);
-  background: rgba(0, 0, 0, 0.3411764706);
-}
-.contact-us .check-schedule .container .form-container form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.contact-us .check-schedule .container .form-container form input {
-  margin-top: 25px;
-  padding: 10px;
-  width: 150%;
-  border-radius: 5px;
-  border: none;
-}
-.contact-us .check-schedule .container .form-container button {
-  width: 100px;
-  padding: 10px;
-  margin-top: 25px;
-  margin-right: 50px;
-  border-radius: 10px;
-  border: none;
-  background: blue;
 }
 .contact-us .check-schedule button {
   width: 150px;
@@ -271,14 +219,47 @@ footer .footer-container .footer-right .contact-footer i {
   margin-left: 70px;
   border-radius: 10px;
   border: none;
-  background: blue;
-  color: rgba(192, 190, 190, 0.943);
+  background: rgb(171, 215, 239);
+  color: rgb(0, 0, 0);
 }
-@media screen and (max-width: 768px) {
-  .contact-us .check-schedule button {
-    padding: 5px;
-    margin-bottom: 10px;
-  }
+.contact-us .container {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-right: 50px;
+}
+.contact-us .container .form-container {
+  width: 400px;
+  height: 350px;
+  background: rgba(168, 162, 162, 0.4666666667);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 2px solid rgb(70, 68, 68);
+}
+.contact-us .container .form-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact-us .container .form-container form input {
+  margin-top: 25px;
+  padding: 10px;
+  width: 150%;
+  border-radius: 5px;
+  border: none;
+}
+.contact-us .container .form-container button {
+  width: 100px;
+  padding: 10px;
+  margin-top: 25px;
+  margin-right: 50px;
+  border-radius: 10px;
+  border: none;
+  background: rgb(90, 202, 240);
 }
 
 .location h1 {
