--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -1,6 +1,6 @@
 
 @import "./main.scss";
-@import './content/MakeAppointment';
+@import "./component/MakeAppointment";
 @import "./component/location";
 
 .working-hour {
