--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -8,78 +8,78 @@
 
     h1 {
         margin: {
-            top: 30px;
+            top: 50px;
             bottom: 50px;
         }
-<<<<<<< HEAD
-        ;
-=======
         @include responsive(md){
             margin-top:100px;
         }
->>>>>>> 1db6214e69cb68c3560bd6b230779513b26dba86
-        color:$seconaryColor;
     }
 
     .check-schedule {
         width: 100%;
-        height: 475px;
+        height: 490px;
         background-image: url(/image/img-of-content/form.jpg);
         background-size: cover;
-
-        .container {
-            @include column;
-            align-items: end;
-            @include responsive(md){
-                margin-right: 0px;
-                align-items: center;
-            }
-            margin-right: $mainMargin;
-            .form-container {
-                width: 400px;
-                height: 350px;
-                @include centered;
-                flex-direction: column;
-                border-radius: 10px;
-                border: 2px solid $primaryColor;
-                background: #00000057;
-
-                form {
-                    @include centered;
-                    flex-direction: column;
-                    input {
-                        margin-top: 25px;
-                        padding: 10px;
-                        width: 150%;
-                        border-radius: 5px;
-                        border: none;
-                    }
-                }
-
-                button {
-                    width: 100px;
-                    padding: $borderRadius;
-                    margin-top: 25px;
-                    margin-right: 50px;
-                    border-radius: $borderRadius;
-                    border: none;
-                    background: $seconaryColor;
-                }
-            }
-        }
-
         button {
             width: 150px;
-            padding: $borderRadius;
+            height: 45px;
             margin-top: 30px;
-            margin-left: 70px;
+            margin-left: $mainMargin;
             border-radius: $borderRadius;
             border: none;
             background: $seconaryColor;
-            color: $primaryColor;
+            a{
+                color: white;
+            }
             @include responsive(md) {
                 padding: 5px;
                 margin-bottom: 10px;
+            }
+        }
+    }
+    .container {
+        @include column;
+        align-items: end;
+        @include responsive(md){
+            margin-top: 20px;
+            margin-right: 0px;
+            align-items: center;
+        }
+        margin-right: $mainMargin;
+        .form-container {
+            width: 400px;
+            height: 350px;
+            @include centered;
+            flex-direction: column;
+            border-radius: 10px;
+            border: 2px solid $primaryColor;
+            background: #00000057;
+            header{
+                color: white;
+            }
+
+            form {
+                @include centered;
+                flex-direction: column;
+                input {
+                    margin-top: 25px;
+                    padding: 10px;
+                    width: 150%;
+                    border-radius: 5px;
+                    border: none;
+                }
+            }
+
+            button {
+                width: 100px;
+                height: 45px;
+                margin-top: 25px;
+                margin-right: 50px;
+                border-radius: $borderRadius;
+                border: none;
+                background: $seconaryColor;
+                color: white;
             }
         }
     }
