--- a/css/service.css
+++ b/css/service.css
@@ -206,55 +206,74 @@ footer .footer-container .footer-right .contact-footer i {
 .container-card {
   width: 80%;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 50px;
-}
-
-.card {
-  width: 30%;
-  height: 340px;
-  margin-top: 50px;
-  background: rgba(192, 190, 190, 0.943);
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin: 50px;
 }
 @media screen and (max-width: 1200px) {
-  .card {
-    width: 32%;
+  .container-card {
+    width: 85%;
+    gap: 50px;
   }
 }
-@media screen and (max-width: 992px) {
-  .card {
-    width: 48%;
-    height: 320px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .card {
-    width: 98%;
-  }
-}
-.card .card-footer {
+.container-card .card {
+  width: 30%;
+  position: relative;
+  height: 250px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  gap: 7px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  perspective: 1000px;
+  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5019607843);
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.card .card-footer h5 {
-  margin-top: 15px;
-  text-align: center;
-  text-transform: uppercase;
-  color: blue;
-}
-.card .card-footer p {
-  font-size: 12px;
-  text-align: center;
-}
-@media screen and (max-width: 992px) {
-  .card .card-footer p {
-    font-size: 9px;
+@media screen and (max-width: 1200px) {
+  .container-card .card {
+    width: 38%;
   }
 }
 @media screen and (max-width: 768px) {
-  .card .card-footer p {
-    font-size: 9px;
+  .container-card .card {
+    width: 90%;
   }
+}
+.container-card .card .card__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: rgb(171, 215, 239);
+  transform: rotateX(-90deg);
+  transform-origin: bottom;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.container-card .card .card__content .card__description {
+  margin: 10px 0 0;
+  font-size: 14px;
+  color: #777;
+  line-height: 1.4;
+}
+.container-card .card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+}
+.container-card .card:hover .card__content {
+  transform: rotateX(0deg);
+}
+.container-card .card:hover .card__title {
+  margin: 0;
+  font-size: 24px;
+  color: #333;
+  font-weight: 700;
+}
+.container-card .card:hover svg {
+  scale: 0;
 }/*# sourceMappingURL=service.css.map */
