--- a/css/service.css
+++ b/css/service.css
@@ -10,7 +10,7 @@ nav .nav-left {
   align-items: center;
   margin-left: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   nav .nav-left {
     flex: 0.5;
   }
@@ -29,7 +29,7 @@ nav .nav-right {
 nav .nav-right input {
   display: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   nav .nav-right #menu__toggle {
     opacity: 0;
   }
@@ -98,7 +98,7 @@ nav .nav-right input {
     background-color: #CFD8DC;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   nav .nav-right {
     flex: 1.5;
   }
@@ -126,12 +126,12 @@ footer .footer-container {
   justify-content: space-between;
   gap: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   footer .footer-container {
     gap: 30px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container {
     flex-wrap: wrap;
     align-items: center;
@@ -143,12 +143,12 @@ footer .footer-container .footer-left {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left {
     width: 300px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left {
     display: flex;
     justify-content: center;
@@ -161,7 +161,7 @@ footer .footer-container .footer-left img {
   width: 200px;
   margin-bottom: 110px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left img {
     margin-bottom: 0px;
   }
@@ -185,7 +185,7 @@ footer .footer-container .footer-right .contact-footer i {
   line-height: 42px;
   margin: 10px 15px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-right {
     margin-top: 0px;
   }
@@ -217,7 +217,7 @@ header {
   gap: 30px;
   margin: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   .container-card {
     width: 85%;
     gap: 50px;
@@ -237,12 +237,12 @@ header {
   box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5019607843);
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   .container-card .card {
     width: 38%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   .container-card .card {
     width: 90%;
   }
