--- a/sass/content/_table.scss
+++ b/sass/content/_table.scss
@@ -1,56 +1,81 @@
 @import '../component/variable';
 @import '../component/group-mxin';
+@import '../mixins/responsive';
 
-/* Pictures-clinic */
 
-*{
-    text-decoration: none
-}
-.Pictures-clinic{
+.Pictures-clinic {
     @include centered;
-    height: 40vh;
+    margin: 50px;
+    @include responsive(Tablet){
+         flex-direction: column;
+    }
+   
     margin-top: 50px;
-}
-.Pictures{
-    display: flex;
-    justify-content: flex-end;
-    flex: 1;
-}
-.Paragraph{
-    flex: 1;
-    p{
-        width: 50%;
-        margin-top: 25px;
+
+    .Pictures {
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
+    }
+
+    .Paragraph {
+        flex: 1;
+        @include responsive(Tablet){
+            flex: 0;
+        }
+        
+        p {
+            width: 50%;
+            margin-top: 25px;
+            @include responsive(Tablet) {
+                width: 100%;
+                margin-top: 10px;
+            }
+        }
     }
 }
 
+
+
+
+
 /* table */
 
-.table-container{
+.table-container {
+    @include responsive(Tablet) {}
     @include centered;
     flex-direction: column;
     margin-top: -30px;
-    height: 100vh;
     width: 100%;
-    h1{
+
+    h1 {
         color: $seconaryColor;
-    }  
-    .color{
+    }
+
+    .color {
         color: $tablecolor;
-    }   
+    }
 }
-thead{ 
-    height: 10vh;
-    background: $primaryColor;  
-}
-table{
+
+table {
     border-collapse: collapse;
     text-align: center;
     margin-top: 20px;
     height: 60vh;
-    width: 90%;    
+    width: 90%;
     background: $mainColor;
-}
-table, th, td {
-    border: 1px solid $tablecolorblack;
+
+    thead {
+        height: 10vh;
+        background: $primaryColor;
+    }
+
+    th,
+    td {
+        border: 1px solid $tablecolorblack;
+
+        @include responsive(Tablet) {
+            font-size: 11px;
+        }
+    }
 }
