--- a/css/service.css
+++ b/css/service.css
@@ -10,7 +10,7 @@ nav .nav-left {
   align-items: center;
   margin-left: 50px;
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 1024px) {
   nav .nav-left {
     flex: 0.5;
   }
@@ -29,7 +29,7 @@ nav .nav-right {
 nav .nav-right input {
   display: none;
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 730px) {
   nav .nav-right #menu__toggle {
     opacity: 0;
   }
@@ -98,7 +98,7 @@ nav .nav-right input {
     background-color: #CFD8DC;
   }
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 1024px) {
   nav .nav-right {
     flex: 1.5;
   }
@@ -217,10 +217,10 @@ header {
   gap: 30px;
   margin: 50px;
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 1024px) {
   .container-card {
-    width: 85%;
-    gap: 50px;
+    width: 90%;
+    justify-content: start;
   }
 }
 .container-card .card {
@@ -237,14 +237,21 @@ header {
   box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5019607843);
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 1024px) {
   .container-card .card {
-    width: 38%;
+    width: 30%;
+    gap: 27px;
+    height: 200px;
   }
 }
-@media screen and (max-width: ) {
+@media screen and (max-width: 730px) {
   .container-card .card {
-    width: 90%;
+    width: 47%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .container-card .card {
+    width: 98%;
   }
 }
 .container-card .card .card__content {
